     fetch string representation of calling number presentation indicator
     and numeric representation of type of calling number value.
  * Added 'C' option to Meetme which causes a caller to continue in the dialplan
     when kicked out.
  * Added option to run macro when a queue member is connected to a caller, 
     see queues.conf.sample for details.
  * Added QUEUE_VARIABLES function to set queue variables added setqueuevar and 
    setqueueentryvar options for each queue, see queues.conf.sample for details.
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added via patch from cfassoni.
  * CID matching information is now shown when doing 'dialplan show'.
  * app_queue now has a 'loose' option which is almost exactly like 'strict' except it
     does not count paused queue members as unavailable.
  * Added maxfiles option to options section of asterisk.conf which allows you to specify
     what Asterisk should set as the maximum number of open files when it loads.
  * Added the jittertargetextra configuration option.
  * Added the URI redirect option for the built-in HTTP server
  * Added the trunkmaxsize configuration option to chan_iax2.
  * Added G729 passthrough support to chan_phone for Sigma Designs boards.
  * Added the parkedcalltransfers option to features.conf

SIP changes
-----------
  * The default SIP useragent= identifier now includes the Asterisk version
  * A new option, match_auth_username in sip.conf changes the matching of incoming requests.
    If set, and the incoming request carries authentication info,
    the username to match in the users list is taken from the Digest header
    rather than from the From: field. This feature is considered experimental.
  * The "musiconhold" and "musicclass" settings in sip.conf are now removed,
    since they where replaced by "mohsuggest" and "mohinterpret" in version 1.4
  * The "localmask" setting was removed in version 1.2 and the reminder about it
    being removed is now also removed.